--- a/package.json
+++ b/package.json
@@ -2,37 +2,51 @@
   "name": "admin",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "@faker-js/faker": "^7.5.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.6.6",
+    "@heroicons/react": "^2.0.10",
+    "@react-icons/all-files": "^4.1.0",
+    "admin": "^1.4.1",
+    "autoprefixer": "^10.4.8",
+    "axios": "^0.27.2",
+    "chart.js": "^2.9.4",
+    "dayjs": "^1.11.5",
+    "document": "^0.4.7",
+    "format": "^0.2.2",
+    "fs": "^0.0.1-security",
+    "headlessui": "^0.0.0",
+    "menu": "^0.2.5",
+    "moment": "^2.29.4",
+    "next": "12.2.4",
+    "next-auth": "^4.10.3",
+    "next-redux-wrapper": "^7.0.5",
+    "outline": "^0.1.1",
+    "postcss": "^8.4.16",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
+    "react-cookie": "^4.1.1",
+    "react-datepicker": "^4.8.0",
+    "react-dom": "18.2.0",
+    "react-fontawesome": "^1.7.1",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "solid": "^0.2.1",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.4.33",
+    "transition": "^0.1.1"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "eslint": "8.21.0",
+    "eslint-config-next": "12.2.4",
+    "tailwindcss": "^3.1.8"
   }
 }
